# cds-spatial-analytics-2025

./: README.md  pyproject.toml  requirements.txt  test.py  test_data_loader.py
data/: Geografi2005.csv  Geografi2009.csv  ValgData2005.csv  ValgData2009.csv  kommuneinddeling.shp
data/geodata/geoBoundaries-DNK-ADM2-all/: geoBoundaries-DNK-ADM2-metaData.txt
data/kmdvalg/: aggregated_counselor_counts.csv  aggregated_kommune_data_2001.csv  kommune_data_2001.csv  kommune_data_2001_with_post_merger.csv  kommune_data_2005.csv  kommune_data_2009.csv  kommune_data_combined.csv
data/kommuner-shp-utm-32N/: README.txt  kommuneinddeling.dbf  kommuneinddeling.shx
data/kommuner2005/: kommuner2005.dbf  kommuner2005.shx
data/wrangled_data/: wrangled_data.dbf  wrangled_data.shx
data_collection/: kmdvalg_scraper.py  pre_merger_counsilor_aggregation.py
data_exploration/: examine_shapefile_data.py  examine_wrangled_data.py  kmdvalg_scraper.py  pre_merger_counsilor_aggregation.py  scraper_2001_election.py
output/: municipal_reform_report.json
src/: main.py  run_municipal_analysis.py
src/services/: data_analyzer.py  data_loader.py  data_merger.py  reform_analyzer.py  reform_visualizer.py  visualizer.py
src/utils/: copenhagen_municipalities.py  data_mappings.py
