[project]
name = "spatial-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",
    "geopandas>=0.14.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "numpy>=1.26.0",
    "contextily>=1.4.0",
    "pyproj>=3.6.0",
    "mapclassify>=2.6.0",
    "requests>=2.31.0",
    "shapely>=2.0.0",
    "pyogrio>=0.11.0",
    "bs4>=0.0.2",
    "chardet>=5.2.0",
    "skrub>=0.5.3",
    "click>=8.2.0",
    "matplotlib-scalebar>=0.9.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
